--- a/vcweb/lighterprints/templates/lighterprints/participate.html
+++ b/vcweb/lighterprints/templates/lighterprints/participate.html
@@ -130,8 +130,9 @@
                 <h2>Complete challenges to earn green points.</h2>
                 <p data-bind='if: hasScheduledActivities'>
                     Different challenges are available at different times and days. 
-                    <span data-bind='if: linearPublicGood'>You will earn <i class='fa fa-usd'></i>0.02 for each point in your group average score, so if your group average score is <b>150</b> by the end of today for instance you would earn 
-                        <i class='fa fa-usd'></i>3.00 for this day.
+                    <span data-bind='if: linearPublicGood'>You will earn <b><i class='fa fa-usd'></i>0.02</b> for each
+                        point in your group average score. For example, if your group average score is <b>123</b> by the
+                        end of today you would have earned <b><i class='fa fa-usd'></i>2.46</b>.
                     </span>
                     <span data-bind='ifnot: linearPublicGood'>In order to maximize your chances at
                         winning a prize, your group must earn enough points so that the <strong>average number of points</strong> per participant is greater than
@@ -217,17 +218,21 @@
             <div class='well alert-white'>
                 <h4>I don't have a car or anyone to carpool with, so how can I carpool?</h4>
                 <p>
-                You don't have to actually perform the activity in the real world to click on "perform". These are just
-                virtual challenges for the moment. In the future we 
+                You don't have to actually perform the activity in the real world to click on the "perform" button. At
+                the moment these are purely virtual challenges.
                 </p>
             </div>
         </div>
         <div class='tab-pane' id='group'>
             <h1 class='header'><i class='fa fa-comment'></i> My Group</h1>
+            <div class='alert alert-white alert-block'>
+                <i class='fa fa-info-circle'></i> Your group has earned <b data-bind='text: totalDailyEarnings'></b> so far today and <b data-bind='text: totalEarnings'></b>
+                over the entire experiment.
+            </div>
             <h3 class='underline'>Group Chat</h3>
             <form id='chat-form' data-bind='submit: submitChatMessage' role="form">
+                <input type='hidden' name='participant_group_id' value='{{participant_group_relationship.id}}'/>
                 <div class='input-group'>
-                    <input type='hidden' name='participant_group_id' value='{{participant_group_relationship.id}}'/>
                     <span class='input-group-addon'><i class='fa fa-comment'></i></span>
                     <input type='text' id='chatText' class="form-control" name='message' placeholder='Send a message to your group' />
                 </div>
@@ -315,7 +320,7 @@
 {% endblock content %}
 {% block sidebar %}
 <div class='lighterprints-sidebar'>
-    {% if compare_other_group %}
+    {% if has_leaderboard %}
     <h3 class='lighterprints-sidebar-header'><i class='text-gold fa fa-trophy'></i> Leaderboard</h3>
     <ul class='nav' data-bind='foreach: groupData'>
         <li class='leaderboard-group-name'><strong>#<span data-bind='text:$index() + 1'></span></strong> <span data-bind='css: { "bold lighterprints-blue": groupName() == $root.groupName()}'><span data-bind='text: groupName'></span></span><span class='pull-right badge badge-lighterprints-green' data-bind='text: averagePoints'></span></li>
