--- a/vcweb/lighterprints/templates/lighterprints/participate.html
+++ b/vcweb/lighterprints/templates/lighterprints/participate.html
@@ -235,8 +235,9 @@
         <div class='tab-pane' id='group'>
             <h1 class='header'><i class='fa fa-comment'></i> My Group</h1>
             <div class='alert alert-white alert-block'>
-                <i class='fa fa-info-circle'></i> Your group has earned <b data-bind='text: totalDailyEarnings'></b> so far today and <b data-bind='text: totalEarnings'></b>
-                over the entire experiment.
+                <i class='fa fa-info-circle'></i> Your group has earned <b class='lighterprints-green'><i class='fa fa-usd'></i><span
+                        data-bind='text: totalDailyEarnings'></span></b> so far today and <b class='lighterprints-green'>
+                    <i class='fa fa-usd'></i><span data-bind='text: totalEarnings'></span></b> over the entire experiment.
             </div>
             <h3 class='underline'>Group Chat</h3>
             <form id='chat-form' data-bind='submit: submitChatMessage' role="form">
