--- a/vcweb/lighterprints/templates/lighterprints/highschool.html
+++ b/vcweb/lighterprints/templates/lighterprints/highschool.html
@@ -33,13 +33,10 @@
                     </p>
                 </div>
                 <div class='alert alert-danger alert-block'>
-                    <strong class='lighterprints-blue'>
+                    <strong>
                         <i class='fa fa-info-circle'></i>
-                        Please take the following quiz before continuing.
+                        You must <a data-bind='attr: { href: surveyUrl }'>click here and complete a quiz before you can continue</a>.
                     </strong>
-                </div>
-                <div class='qualtrics-survey well'>
-                    <iframe width='100%' height='800' data-bind='attr: { src: surveyUrl }'></iframe>
                 </div>
             </div>
             <div data-bind='if: quizCompleted'>
